# WEC-REC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Tasks/Task1/: Task1.cpp
Tasks/Task1/assets/gun/: ar-15.mtl
Tasks/Task1/shaders/: modelfrag.glsl
Tasks/Task2/: Task2.cpp
Tasks/Task2/shaders/: Texturevert.glsl  vert.glsl
Tasks/Task3/: Task3.cpp
Tasks/Task3/assets/carr/: toyota_gr_supra_gt_gt300.mtl
Tasks/Task3/shaders/: Texturefrag.glsl  filreader.h  frag.glsl  modelvert.glsl
src/: Camera.h  Mesh.h  Model.h  Shader.cpp  Shader.h  callbacks.cpp  callbacks.h  hexagon.h  stb_image_write.h
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
